--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,6 @@
-# Config file for automatic testing at travis-ci.org
-sudo: false
 language: python
 python:
   - 3.8
-
-env:
-  global:
-  - secure: "<encrypted MYPYPI_USER=username>"
-  - secure: "<encrypted MYPYPI_PASS=p@ssword>"
 
 # Command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
@@ -24,7 +17,7 @@ script: tox
 # $ travis encrypt --add deploy.password
 
 before-deploy:
-- poetry config pypi-token.pypi $PYPI_TOKEN
+  poetry config pypi-token.pypi $PYPI_TOKEN
 
 deploy:
   provider: script
